Edit `/mcc` information with new party commands
`/party password` can now be used to clear the parties password when no
argument is provided.
Also improved feedback messages when managing your party.

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--GRUPPE KOMMANDOER--
 Commands.Party.Invite.0=[[RED]]INFORMATION: [[GREEN]]Du har modtaget en gruppe invitation for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Skrive [[GREEN]]/party accept[[YELLOW]] for at acceptere invitation
-Commands.Party.Invite=<player> [[RED]]- Send gruppe invitation
+Commands.Party.Invite=[[RED]]- Send gruppe invitation
 Commands.Party.Join=[[GRAY]]Joinede Gruppen: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]Du er ikke i en gruppe.
 Commands.Party.Quit=[[RED]]- Forlad din nuv\u00e6rende Gruppe
 Commands.Party.Teleport=<player> [[RED]]- Teleporter til gruppe medlem
 Commands.Party.Toggle=[[RED]]- Skift Gruppe Chat
-Commands.Party=<party-name> [[RED]]- Lav/Join \u00f8nskede Gruppe
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} er den nye gruppe leder.
 Party.Owner.NotLeader=[[DARK_RED]]Du er ikke l\u00e6ngere gruppens leder.
 Party.Owner.Player=[[GREEN]]Du er nu gruppe lederen.
 Party.Password.Incorrect=[[RED]]Gruppe kodeord er forkert.
-Party.PasswordSet=[[GREEN]]Gruppe adgangskode sat til {0}
+Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Dette er ikke en rigtig spiller.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
