--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMANDI DI COMPAGNIA--
 Commands.Party.Invite.0=[[RED]]AVVISO: [[GREEN]]Hai ricevuto un invito ad unirti alla compagnia {0} da {1}
 Commands.Party.Invite.1=[[YELLOW]]Digita [[GREEN]]/party accept[[YELLOW]] per accettare l\'invito
-Commands.Party.Invite=<giocatore> [[RED]]- Manda un invito nella compagnia
+Commands.Party.Invite=[[RED]]- Manda un invito nella compagnia
 Commands.Party.Join=[[GRAY]]Ti sei unito alla Compagnia: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]Non sei nella compagnia.
 Commands.Party.Quit=[[RED]]- Abbandona la tua attuale compagnia
 Commands.Party.Teleport=<giocatore> [[RED]]- Teletrasportati verso un membro della compagnia
 Commands.Party.Toggle=[[RED]]- Attiva o Disattiva la Chat di Compagnia
-Commands.Party=<nome-compagnia> [[RED]]- Crea/Unisciti alla compagnia scelta
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} \u00e8 il nuovo capo della compagnia.
 Party.Owner.NotLeader=[[DARK_RED]]Non sei pi\u00f9 il capo della compagnia.
 Party.Owner.Player=[[GREEN]]Ora sei il capo della compagnia.
 Party.Password.Incorrect=[[RED]]Password di compagnia incorretta.
-Party.PasswordSet=[[GREEN]]Password della compagnia impostata come {0}
+Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Quello non \u00e8 un giocatore valido.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
