--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging ontvangen voor {0} van {1}
 Commands.Party.Invite.1=[[YELLOW]]Typ [[GREEN]]/party accept[[YELLOW]] om de uitnodiging te accepteren
-Commands.Party.Invite=<player> [[RED]]- Stuur een groep uitnodiging
+Commands.Party.Invite=[[RED]]- Stuur een groep uitnodiging
 Commands.Party.Join=[[GRAY]]Groep betreden: {0}
 Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
 Commands.Party.Rename=[[GRAY]]Groep naam veranderd naar: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]Je bent niet in een groep.
 Commands.Party.Quit=[[RED]]- Leave your current party
 Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
 Commands.Party.Toggle=[[RED]]- Toggle Party Chat
-Commands.Party=<party-name> [[RED]]- Create/Join designated party
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Groeps wachtwoord is incorrect.
-Party.PasswordSet=[[GREEN]]Groep wachtwoord veranderd in {0}
+Party.Password.Set=[[GREEN]]Groep wachtwoord veranderd in {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Dat is geen geldige speler.
 Party.NotOnline=[[DARK_RED]]{0} is niet online!
 Party.Player.InSameParty=[[RED]]{0} zit al in je groep!
