--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--\u0413\u0420\u0423\u041f\u041f\u041e\u0412\u042b\u0415 \u041a\u041e\u041c\u0410\u041d\u0414\u042b--
 Commands.Party.Invite.0=[[RED]]\u0412\u041d\u0418\u041c\u0410\u041d\u0418\u0415: [[GREEN]]\u0412\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u043b\u0438 \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0432 \u0433\u0440\u0443\u043f\u043f\u0443 {0} \u043e\u0442 {1}
 Commands.Party.Invite.1=[[YELLOW]]\u041d\u0430\u043f\u0438\u0448\u0438\u0442\u0435 [[GREEN]]/party accept[[YELLOW]] \u0447\u0442\u043e\u0431\u044b \u043f\u0440\u0438\u043d\u044f\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435
-Commands.Party.Invite=<player> [[RED]]- \u041f\u043e\u0441\u043b\u0430\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0432 \u0433\u0440\u0443\u043f\u043f\u0443
+Commands.Party.Invite=[[RED]]- \u041f\u043e\u0441\u043b\u0430\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0432 \u0433\u0440\u0443\u043f\u043f\u0443
 Commands.Party.Join=[[GRAY]]\u0412\u044b \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0435\u043d\u0438\u043b\u0438\u0441\u044c \u043a \u0413\u0440\u0443\u043f\u043f\u0435: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]\u0412\u044b \u043d\u0435 \u0432 \u0433\u0440\u0443\u
 Commands.Party.Quit=[[RED]]- \u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u0442\u0435\u043a\u0443\u0449\u0443\u044e \u0433\u0440\u0443\u043f\u043f\u0443
 Commands.Party.Teleport=<player> [[RED]]- \u0422\u0435\u043b\u0435\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f \u043a \u0447\u043b\u0435\u043d\u0443 \u0433\u0440\u0443\u043f\u043f\u044b
 Commands.Party.Toggle=[[RED]]- \u0412\u043a\u043b./\u043e\u0442\u043a\u043b. \u0433\u0440\u0443\u043f\u043f\u043e\u0432\u043e\u0439 \u0447\u0430\u0442
-Commands.Party=<party-name> [[RED]]- \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0443\u043a\u0430\u0437\u0430\u043d\u0443\u044e \u0433\u0440\u0443\u043f\u043f\u0443 \u0438\u043b\u0438 \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0435\u043d\u0438\u0442\u044c\u0441\u044f \u043a \u043d\u0435\u0439
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} \u0442\u0435\u043f\u0435\u0440\u044c \u043d\u043e\u
 Party.Owner.NotLeader=[[DARK_RED]]\u0412\u044b \u0431\u043e\u043b\u044c\u0448\u0435 \u043d\u0435 \u043b\u0438\u0434\u0435\u0440 \u0433\u0440\u0443\u043f\u043f\u044b.
 Party.Owner.Player=[[GREEN]]\u0422\u0435\u043f\u0435\u0440\u044c \u0432\u044b \u043b\u0438\u0434\u0435\u0440 \u0433\u0440\u0443\u043f\u043f\u044b.
 Party.Password.Incorrect=[[RED]]\u041f\u0430\u0440\u043e\u043b\u044c \u0433\u0440\u0443\u043f\u043f\u044b \u043d\u0435\u043f\u0440\u0430\u0432\u0438\u043b\u044c\u043d\u044b\u0439.
-Party.PasswordSet=[[GREEN]]\u041f\u0430\u0440\u043e\u043b\u044c \u0433\u0440\u0443\u043f\u043f\u044b \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d {0}
+Party.Password.Set=[[GREEN]]\u041f\u0430\u0440\u043e\u043b\u044c \u0433\u0440\u0443\u043f\u043f\u044b \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]\u042d\u0442\u043e \u043d\u0435\u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0439 \u0438\u0433\u0440\u043e\u043a.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
