--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--P\u0158\u00cdKAZY PARTY--
 Commands.Party.Invite.0=[[RED]]VAROVANI: [[GREEN]]Obdrzel jsi pozvanku do party {0} od {1}
 Commands.Party.Invite.1=[[YELLOW]]Napis [[GREEN]]/party accept[[YELLOW]] pro potvrzeni pozvanky
-Commands.Party.Invite=<player> [[RED]]- Poslat pozv\u00e1nku do party
+Commands.Party.Invite=[[RED]]- Poslat pozv\u00e1nku do party
 Commands.Party.Join=[[GRAY]]Pripojen do party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[RED]]Nejsi v zadne party.
 Commands.Party.Quit=[[RED]]- Opustil jsi svoji aktualni partu
 Commands.Party.Teleport=<hrac> [[RED]]- Teleport ke clenovi party
 Commands.Party.Toggle=[[RED]]- Zapnout party chat
-Commands.Party=<jm\u00e9no-party> [[RED]]- Vytvo\u0159it/P\u0159ipojit se k part\u011b.
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.PasswordSet=[[GREEN]]Heslo do party nastaveno na {0}
+Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Tohle neni platny hrac.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
