--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--GRUPPEN COMMANDS--
 Commands.Party.Invite.0=[[RED]]INFO: [[GREEN]]Du hast eine Gruppen-Einladung f\u00fcr {0} von {1} bekommen
 Commands.Party.Invite.1=[[YELLOW]]Schreibe [[GREEN]]/party accept[[YELLOW]] um die Einladung zu genehmingen
-Commands.Party.Invite=<Spieler> [[RED]]- Gruppen-Einladung versenden
+Commands.Party.Invite=[[RED]]- Gruppen-Einladung versenden
 Commands.Party.Join=[[GRAY]]Beigetretene Gruppe: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]Du bist in keiner Gruppe.
 Commands.Party.Quit=[[RED]]- Verlasse deine derzeitige Gruppe
 Commands.Party.Teleport=<Spieler> [[RED]]- Zu Gruppen-Mitglied teleportieren
 Commands.Party.Toggle=[[RED]]- Gruppen-Chat umschalten
-Commands.Party=<party-name> [[RED]]- Gew\u00fcnschte Gruppe Er\u00f6ffnen/Beitreten
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.PasswordSet=[[GREEN]]Gruppen-Password ge\u00e4ndert zu: {0}
+Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Dies ist kein g\u00fcltiger Spieler.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
