--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMANDOS DEL GRUPO--
 Commands.Party.Invite.0=[[RED]]ATENCI\u00d3N: [[GREEN]]Fuiste invitado al grupo {0} por {1}
 Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/party accept[[YELLOW]] para aceptar la invitaci\u00f3n
-Commands.Party.Invite=<jugador> [[RED]]- Enviar invitaci\u00f3n al grupo
+Commands.Party.Invite=[[RED]]- Enviar invitaci\u00f3n al grupo
 Commands.Party.Join=[[GRAY]]Se uni\u00f3 al grupo: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]No est\u00e1s en un grupo.
 Commands.Party.Quit=[[RED]]- Abandona tu grupo actual
 Commands.Party.Teleport=<jugador> [[RED]]- Teletransportarse al miembro del grupo
 Commands.Party.Toggle=[[RED]]- Alternar chat de grupo
-Commands.Party=<nombre del grupo> [[RED]]- Crear/Unirse al grupo elegido
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.PasswordSet=[[GREEN]]Contrase\u00f1a del grupo establecida: [[RED]]{0}
+Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Ese no es un jugador v\u00e1lido.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
