--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -395,7 +395,7 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMMANDES DE GROUPE--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Vous avez re\u00e7u une invitation de {1} pour rejoindre le groupe {0}
 Commands.Party.Invite.1=[[YELLOW]]Faites [[GREEN]]/party accept[[YELLOW]] pour accepter l\'invitation
-Commands.Party.Invite=<nom> [[RED]]- Envoyer une invitation
+Commands.Party.Invite=[[RED]]- Envoyer une invitation
 Commands.Party.Join=[[GRAY]]Rejoint le groupe: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -408,7 +408,8 @@ Commands.Party.None=[[RED]]Vous n\'\u00eates pas dans un groupe.
 Commands.Party.Quit=[[RED]]- Quitte votre groupe actuel
 Commands.Party.Teleport=<nom> [[RED]]- T\u00e9l\u00e9porte sur un membre du groupe
 Commands.Party.Toggle=[[RED]]- Active / d\u00e9sactive le canal groupe
-Commands.Party=<nom> [[RED]]- Cr\u00e9e ou rejoint ce groupe
+Commands.Party1=[[RED]]- Create a new party
+Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -466,7 +467,8 @@ Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.PasswordSet=[[GREEN]]Mot de passe d\u00e9fini : {0}
+Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Ce joueur n\'existe pas.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
