--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.4.00-dev
  + Added '/ptp accept' and '/ptp acceptall' commands
  + Added timeout on party teleport requests
  + Added XP bonus for Archery based on distance from shooter to target
+ + Added ability to config Hylian Luck drops through treasures.yml
  = Fixed Spout config files loading / generating when they shouldn't have
  = Fixed mod config files loading / generating when they shouldn't have
  = Fixed bug where Green Terra could activate on crops that weren't fully grown.
